# eztool

./: .gitignore  IGBOTv2.1.py  LICENSE  README.md  info.txt  pg.txt  push.sh  pyproject.toml  records.txt  setup.cfg
FastApiTemplate/: README.md  cdn_config.json  main.py  push.sh  requirements.txt  test.py
FastApiTemplate/og/: og.py
FastApiTemplate/web/css/: style.css
FastApiTemplate/web/html/: index.html  second.html
FastApiTemplate/web/js/: main.js  main.min.js
FilesTransferrer_one_direction/: .env  .gitignore  README.md  Upload.exe.spec  main.py  push.sh  requirements.txt
FilesTransferrer_one_direction/cdn/: main.js  main.min.js
FilesTransferrer_one_direction/script/: convert_path.py  get_path.py  ip.py  kit.py  qrcode.py
FilesTransferrer_one_direction/temp/: main.html
IgAutoFollow/: IGBOTv2.1.py  pg.txt  records.txt
LinkDistributor/: README.md  link_counter.py  push.sh  test.py
LinkDistributor/database/: 03_2022.csv  04_2022.csv  init
LinkDistributor/og/: og.py
LinkDistributor/web/css/: redirect.css  style.css
LinkDistributor/web/html/: index.html  redirect.html
LinkDistributor/web/js/: main.js  main.min.js
OptionCrawler/: README.md  main.py  requirements.txt  stock_list.xlsx
src/eztool/: __init__.py  json_worker.py  og.py  pyxl_handler.py  timer.py  xw_handler.py
src/eztool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test.py
