[metadata]
name = eztool
version = 0.0.2
author = Ken Yeung
author_email = 
description = Useful tools makes your life easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ken-Yeung/KensToolkit/tree/eztool
project_urls =
    Bug Tracker = https://github.com/Ken-Yeung/KensToolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
License = MIT
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src